vertical align section for safari fix/bug

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -22,7 +22,18 @@ ring-sizing: border-ring;
 box-sizing: border-box 
 }
 
+* input {
+	border: none;
+	border-bottom: 1px solid #3b3b3b;
+	&:hover {
+		border: none;
+		border-bottom: 2px solid #3b3b3b;
+	}
+}
 
+*:focus {
+	outline: 0;
+}
 
 // Article index page
 
@@ -53,7 +64,7 @@ aside {
 			text-decoration: none;
 			text-align: right;
 			font-family: 'Montserrat', sans-serif;
-			font-size: 1.5em;		
+			font-size: 1.3em;		
 			letter-spacing: 0px;
 			line-height: 1.023em;
 			color: #3b3b3b;
@@ -62,7 +73,7 @@ aside {
 			color: #3b3b3b;
 			font-family: 'Imprima', sans-serif;				
 			font-style: italic;
-			font-size: 16px;
+			font-size: 15px;
 			text-align: right;
 			display: inline-block;
 	    height: 60px;
@@ -279,17 +290,18 @@ ul.tags {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 2em;		
 	letter-spacing: 0px;
-	line-height: 1.023em;
+	line-height: 1.0em;
 	color: #3b3b3b;
 	text-decoration: none;
 	text-align: right;
 	color: #3b3b3b;
 	border-bottom: 2px solid #fff3f5;
+	margin-bottom: 50px;
+	display: block;
 	a {
 		text-decoration: none;
 		color: #3b3b3b;
 		margin-left: 40px;
-		margin-bottom: 80px;
 		&:hover {
 			color: #F7CE56;
 		}
@@ -385,3 +397,5 @@ ul.tags {
 		}
 	}
 }
+
+
